# pyifb

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  build.sh  build_and_test.sh  coverage.sh  lint.sh  pyproject.toml  setup.py  test.py  tox.ini
.github/: actionlint.yaml  copilot-instructions.md  dependabot.yml
.github/workflows/: actionlint.yml  bandit.yml  black.yml  codeql.yml  coveralls.yml  cygwin.yml  linux-arm.yml  linux-gcc.yml  linux-intel.yml  linux-llvm.yml  linux.yml  macos.yml  mypy.yml  pypi.yml  pypy.yml  reusable-build-test.yml  windows.yml  zizmor.yml
pyifb/: __init__.py  ifb.c  ifb.h  ifb.py  ifb.pyi  utils.py
tests/: CMakeLists.txt  Makefile  bindc.f90  cdesc_test_helper.c  conftest.py  test_cdesc.py  test_cfidesc_wrapper.py  test_dim.py  test_fortran.py  test_macros.py
