[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pyifb"
description = "Python bindings to ISO_Fortran_binding.h"

authors = [
    {name="Robert Farmer", email="robert.j.farmer37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "numpy <2.3",
]

dynamic = ["version"]

[tool.setuptools]
packages = ["pyifb"]


[project.optional-dependencies]
test = ['pytest']
coverage = ['pytest', 'pytest-cov']
dev = ['pre-commit','black', 'pytest']
perfomance = ["pytest", "pytest-codspeed"]

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
source = ["pyifb"]
parallel = true
concurrency = ["multiprocessing", "thread"]
