[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=9.2"]
build-backend = "setuptools.build_meta"


[project]
name = "pyifb"
description = "Python bindings to ISO_Fortran_binding.h"

authors = [
    {name="Robert Farmer", email="robert.j.farmer37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-2.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "numpy >= 2.0.0",
]

dynamic = ["version"]

[tool.setuptools]
packages = ["pyifb"]

[tool.setuptools_scm]


[project.optional-dependencies]
test = ['pytest']
coverage = ['pytest', 'pytest-cov']
dev = ['pre-commit','black', 'pytest', 'mypy']
perfomance = ["pytest", "pytest-codspeed"]
types = ['mypy','types-setuptools']

[tool.pytest.ini_options]
addopts = "-s"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
source = ["pyifb"]
parallel = true
concurrency = ["multiprocessing", "thread"]
